--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-               "name": "Suhail-MD",
+               "name": "Dragon-MD",
                "version": "1.0.1",
-               "description": "Multi device whatsapp bot by SuhailTechInfo.",
+               "description": "Multi device whatsapp bot by Naveed Dogar.",
                "main": "lib/client.js",
                "type": "commonjs",
                "license": "GPL-3.0",
    "scripts": {
-                "start": "pm2 start lib/client.js --deep-monitoring --attach --name Suhail_Md",
-                "stop": "pm2 stop Suhail_Md"
+                "start": "pm2 start lib/client.js --deep-monitoring --attach --name Dragon_Md",
+                "stop": "pm2 stop Dragon_Md"
                 },
-               "author": "SuhailTechInfo",
+               "author": "naveeddogar",
               "dependencies": {
                        "@sampandey001/baileys": "latest",
                        "@adiwajshing/keyed-db": "^0.2.4",
@@ -72,10 +72,10 @@
                     },
                  "repository": {
                  "type": "git",
-                 "url": "git+https://github.com/SuhailTechInfo/Secktor-bot.git"
+                 "url": "git+https://github.com/naveeddogar/Dragon-MD.git"
                   },
                  "bugs": {
-                 "url": "https://github.com/SuhailTechInfo/Secktor-bot/issues"
+                 "url": "https://github.com/naveeddogar/Dragon-MD/issues"
                   },
-                 "homepage": "https://github.com/SuhailTechInfo/Secktor-bot#readme"
+                 "homepage": "https://github.com/naveeddogar/Dragon-MD#readme"
                   }
