--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Suhail-Md By Suhail Tech Info",
-  "description": "A Whatsapp bot built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/c/SuhailTechInfo",
+  "name": "Dragon-Md By Naveed Dogar",
+  "description": "A Whatsapp bot built in NodeJs to make experience better\n\t if Any Problem : Contact Whatapp",
   "logo": "https://i.imgur.com/NpA3ZsJ.jpeg",
-  "keywords": ["whatsappbot", "suhailMd", "suhail Md Wa bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
+  "keywords": ["whatsappbot", "Dragon-MD", "Dragon Md Wa bot", "Dragon-Md", "DragonMdWhatsaooBot", "DragonWaBot","DragonMD","Dragon Md Whatsapp Bot","multi device"],
   "success_url": "/",
   "stack": "container",
 "env": {
@@ -56,7 +56,7 @@
   },
   "OWNER_NUMBER": {
     "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-    "value": "923184474176"
+    "value": "923096566451"
   },
    "SESSION_ID": {
     "description": "Please put your SESSION_ID here,if you don't have visit\nhttps://replit.com/@SuhailTechInfo/Secktor-Bot"
