--- a/sample-config.env
+++ b/sample-config.env
@@ -1,9 +1,9 @@
 # ____REMOVE THIS LINE AFTER RENAMING sample.config.env to config.env ____
-THUMB_IMAGE = "https://raw.githubusercontent.com/SecktorBot/Brandimages/main/logos/SocialLogo%201.png"
+THUMB_IMAGE = "https://raw.githubusercontent.com/ThorMD/Brandimages/main/logos/SocialLogo%201.png"
 port = 5000
-email = "sam@secktor.live"
+email = "saad@saad.live"
 global_url = "instagram.com"
-OWNER_NAME = "SamPandey001"
+OWNER_NAME = "saadIbrahim"
 AUTO_REACTION = false
 FAKE_COUNTRY_CODE = 92
 READ_MESSAGE = false
@@ -15,6 +15,6 @@ LEVEL_UP_MESSAGE= true
 WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count th"
 THEME= SECKTOR
 WORKTYPE = public
-PACK_INFO = "Sam;Pandey"
+PACK_INFO = "Thor;MD"
 ANTILINK_VALUES = "chat.whatsapp.com"
  
