--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-  "name": "Dragon-Md By Naveed Dogar",
+  "name": "Thor-Md By Saad Ibrahim",
   "description": "A Whatsapp bot built in NodeJs to make experience better\n\t if Any Problem : Contact Whatapp",
-  "logo": "https://i.imgur.com/ZL4n6bK.jpeg",
-  "keywords": ["whatsappbot", "Dragon-MD", "Dragon Md Wa bot", "Dragon-Md", "DragonMdWhatsaooBot", "DragonWaBot","DragonMD","Dragon Md Whatsapp Bot","multi device"],
+  "logo": "https://telegra.ph/file/4e406c1a71d16c9be980a.jpg",
+  "keywords": ["whatsappbot", "Thor-MD", "Thor Md Wa bot", "Thor-Md", "ThorMdWhatsaooBot", "ThorWaBot","ThorMD","Thor Md Whatsapp Bot","multi device"],
   "success_url": "/",
   "stack": "container",
 "env": {
   "OWNER_NAME": {
     "description": "Name of Bot Owner",    
-    "value": "Naveeddogar"
+    "value": "SaadIbrahim"
   },
   "HEROKU_API_KEY": {
     "description": "Put Your Heroku Api Key Here",
